Started work on JWT authentication
